# ballistic

./: .gitignore  README.md
proto/gl_4_transform/: CMakeLists.txt  debug.cpp  debug.h  ifrontend.h  mac_frontend.cpp  mac_frontend.h  main.cpp  math.h  matrix.h  win_frontend copy.h  win_frontend.cpp  win_frontend.h
proto/gl_4_transform/glew/: CMakeLists.txt
proto/gl_4_transform/glm/: CMakeLists.txt
source/: CMakeLists.txt
source/base/: CMake.Generate.in  CMake.Generate.txt  CMakeLists.txt  ballistic.config.cmake  ballistic.config.in
source/base/include/: ballistic.aabox.h  ballistic.aabox.inl  ballistic.animation.component.h  ballistic.animation.driver.h  ballistic.animation.function.h  ballistic.animation.function_implementation.h  ballistic.animation.function_type.h  ballistic.animation.h  ballistic.animation.ianimation.h  ballistic.animation.parallel.h  ballistic.animation.sequence.h  ballistic.animation.storyboard.h  ballistic.animation.stream_sequence.h  ballistic.animation.triggers.h  ballistic.attribute.h  ballistic.base.h  ballistic.common_id.h  ballistic.component.h  ballistic.component_constructor.h  ballistic.component_container.h  ballistic.component_factory.h  ballistic.component_info.h  ballistic.config.h  ballistic.containers.component_container.h  ballistic.containers.entity_container.h  ballistic.containers.icontainer.h  ballistic.containers.notify_property_container.h  ballistic.containers.property_container.h  ballistic.containers.property_definition_container.h  ballistic.containers.system_container.h  ballistic.convert.h  ballistic.debug.h  ballistic.entity.h  ballistic.entity_constructor.h  ballistic.entity_container.h  ballistic.entity_factory.h  ballistic.entity_model.component_info.h  ballistic.entity_model.icomponent_type.h  ballistic.entity_type.h  ballistic.entity_type.hpp  (+75 more)
source/base/src/: ballistic.animation.component.cpp  ballistic.animation.cpp  ballistic.animation.function.cpp  ballistic.animation.function_type.cpp  ballistic.animation.ianimation.cpp  ballistic.animation.parallel.cpp  ballistic.animation.sequence.cpp  ballistic.animation.storyboard.cpp  ballistic.animation.stream_sequence.cpp  ballistic.animation.triggers.cpp  ballistic.attribute.cpp  ballistic.component_constructor.cpp  ballistic.component_container.cpp  ballistic.component_factory.cpp  ballistic.component_info.cpp  ballistic.containers.component_container.cpp  ballistic.containers.entity_container.cpp  ballistic.containers.system_container.cpp  ballistic.debug.cpp  ballistic.entity.cpp  ballistic.entity_constructor.cpp  ballistic.entity_container.cpp  ballistic.entity_factory.cpp  ballistic.entity_model.icomponent_type.cpp  ballistic.entity_type.cpp  ballistic.entity_type_reader.cpp  ballistic.game.cpp  ballistic.icomponent.cpp  ballistic.ifrontend.cpp  ballistic.igame.cpp  ballistic.io.animation_sequence_reader.cpp  ballistic.io.animation_storyboard_reader.cpp  ballistic.io.entity_type_reader.cpp  ballistic.io.package_loader.cpp  ballistic.io.package_reader.cpp  ballistic.io.property_container_reader.cpp  ballistic.io.storage_filesystem.cpp  ballistic.iresource.cpp  ballistic.isystem.cpp  ballistic.message_notifier.cpp  (+20 more)
source/cmake/: FindDirectX.cmake  FindPkgMacros.cmake  system.cmake
source/demo/: CMakeLists.txt
source/demo/dev/: CMakeLists.txt
source/demo/perf_test/: CMakeLists.txt
source/demo/src/: demo.cpp
source/engine/: CMake.Generate.txt  CMakeLists.txt
source/engine/include/: Ballistic.h  ballistic.attribute.h  ballistic.common_id.h  ballistic.component_constructor.h  ballistic.component_factory.h  ballistic.config.h  ballistic.convert.h  ballistic.engine.attribute.h  ballistic.engine.common_messages.h  ballistic.engine.component_constructor.h  ballistic.engine.component_factory.h  ballistic.engine.entity.h  ballistic.engine.entity_definition.h  ballistic.engine.entity_factory.h  ballistic.engine.game.h  ballistic.engine.icomponent.h  ballistic.engine.message.h  ballistic.entity.h  ballistic.entity_definition.h  ballistic.entity_factory.h  ballistic.game.h  ballistic.icomponent.h  ballistic.message.h  ballistic.var.h
source/engine/src/: ballistic.attribute.cpp  ballistic.engine.attribute.cpp  ballistic.engine.component_factory.cpp  ballistic.engine.entity.cpp  ballistic.engine.entity_definition.cpp  ballistic.engine.entity_factory.cpp  ballistic.engine.game.cpp  ballistic.engine.icomponent.cpp  ballistic.entity.cpp  ballistic.entity_definition.cpp  ballistic.entity_factory.cpp  ballistic.game.cpp  ballistic.icomponent.cpp
source/frontend/: CMakeLists.txt
source/frontend/dev_frontend/: CMakeLists.txt
source/frontend/frontend/: CMakeLists.txt
source/frontend/include/: ballistic.frontend.h  ballistic.ifrontend.h  ballistic.osx_frontend.h  ballistic.osx_frontend_native.h
source/frontend/mac_desktop/: CMakeLists.txt
source/frontend/material_editor/: CMakeLists.txt
source/frontend/model_viewer/: CMakeLists.txt
source/frontend/perf_test/: CMakeLists.txt
source/frontend/src/: ballistic.frontend.cpp  ballistic.ifrontend.cpp  ballistic.osx_frontend.mm  ballistic.osx_frontend_native.mm  ballistic.win_frontend.cpp
source/frontend/win_desktop/: CMakeLists.txt
source/game/: CMakeLists.txt
source/game/include/: Ballistic.Game.h
source/graphics/: CMakeLists.txt
source/graphics/include/: ballistic.graphics.camera.h  ballistic.graphics.common_id.h  ballistic.graphics.constant.h  ballistic.graphics.constant.inl  ballistic.graphics.defines.h  ballistic.graphics.device.h  ballistic.graphics.font.h  ballistic.graphics.font_rendering_system.h  ballistic.graphics.graphics_system.h  ballistic.graphics.h  ballistic.graphics.idevice.h  ballistic.graphics.ieffect.h  ballistic.graphics.ieffectfield.h  ballistic.graphics.imaterial.h  ballistic.graphics.imesh.h  ballistic.graphics.io.effect_loader.h  ballistic.graphics.io.effect_package_reader.h  ballistic.graphics.io.font_package_reader.h  ballistic.graphics.io.material_package_reader.h  (+23 more)
source/graphics_directx/: CMakeLists.txt
source/graphics_opengl/: CMakeLists.txt
source/ui/: CMakeLists.txt
(+230 files in other folders)
